...
        android:background="#0000"
        android:orientation="vertical"
        android:layout_height="148dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/reminder_title"
            android:layout_marginLeft="72dp"
            android:hint="알람 이름"
            android:textStyle="bold"
            android:textSize="25dp"
            android:lines="4"
            android:minLines="4"
...
                android:layout_marginTop="50dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="요일 반복"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    />

...
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:background="#00ffffff"
                    android:layout_height="wrap_content">

                    <ToggleButton
                        android:id="@+id/tgbtn_mon_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:textOn="월"
                        android:textOff="월"
                        />
                    <ToggleButton
                        android:id="@+id/tgbtn_tue_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:textOn="화"
                        android:textOff="화"
                        />
                    <ToggleButton
                        android:id="@+id/tgbtn_wed_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:textOn="수"
                        android:textOff="수"
                        />
                    <ToggleButton
                        android:id="@+id/tgbtn_thr_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:textOn="목"
                        android:textOff="목"
                        />
                    <ToggleButton
                        android:id="@+id/tgbtn_fri_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:textOn="금"
                        android:textOff="금"
                        />
                    <ToggleButton
                        android:id="@+id/tgbtn_sat_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
                        android:textOn="토"
                        android:textOff="토"
                        />

                    <ToggleButton
                        android:id="@+id/tgbtn_sun_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
...
                        android:textColor="@color/secondary_text"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/addTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_alarms"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
...
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="다시 울림" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat"
                        android:textSize="15dp"
                        android:text="꺼짐"
                        android:textStyle="bold"
                        android:textColor="@color/secondary_text"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
...
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="반복 횟수" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_no"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/secondary_text"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
...
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:text="저장"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:background="@drawable/background_transparent"/>

...
