<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/triple"
    android:id="@+id/image_layout"
    tools:context="com.mobile_term_project.knight.a2018_mobile.writing_memo"
    android:orientation="vertical">

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/add_photo"
            android:contextClickable="true"
            android:scaleType="fitXY"
            android:id="@+id/memo_image"/>

    <LinearLayout
        android:id="@+id/spinnerlayout"
        android:layout_below="@+id/memo_image"
        android:background="#BFE2FC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="40dp"
            android:id="@+id/medicine_label" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:textSize="40dp"
            android:gravity="center"
            android:id="@+id/medicine_name">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/spinnerlayout"
        android:background="#ffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/memo_hint"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/memo_content"/>
    </LinearLayout>

    <Button
        android:layout_alignParentRight="true"

        android:background="@drawable/background_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:text="@string/submit"
        android:layout_gravity="right"
        android:id="@+id/memo_upload"/>

</RelativeLayout>
