<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_memo"
            android:icon ="@drawable/ic_memo_black"
            android:title="메모 리스트" />

        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_homepage_black"
            android:title="웹 페이지" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black"
            android:title="로그아웃" />


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email_black"
                android:title="e-mail" />
            <item
                android:id="@+id/nav_appinfo"
                android:icon="@drawable/ic_app_info"
                android:title="앱 정보" />
        </menu>
    </item>
</menu>

    <!--로그아웃 / 홈페이지 / 전체 메모 / 개인 설정 / 이메일 보내기 /-->