...
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:textColor="@color/secondary_text"
                android:id = "@+id/name_hospital"
                android:hint="병원 이름을 입력해주세요"
                android:layout_span="2"
                android:layout_marginTop="@dimen/table_margin"
                android:background="#FFFFFF"/>
        </TableRow>

...
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:textColor="@color/secondary_text"
                android:id = "@+id/name_doctor"
                android:hint="의사 이름을 입력해주세요"
                android:layout_span="2"
                android:layout_marginTop="@dimen/table_margin"
                android:background="#FFFFFF"/>
        </TableRow>

...
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:textColor="@color/secondary_text"
                android:id = "@+id/email"
                android:inputType="textEmailAddress"
                android:hint="담당의 E-mail을 입력해주세요"
                android:layout_span="2"
                android:layout_marginTop="@dimen/table_margin"
                android:background="#FFFFFF"/>
        </TableRow>

        <TableRow>
            <ImageButton
                android:id="@+id/update"
                android:background="#0000"
                android:src="@drawable/ic_enroll_email_done"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
...
